resolved the overflowing of content using word break property in css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,9 +11,12 @@
 .unit{
   border: 1px solid blue;
   padding: 30px;
-  margin: 40px 120px;
+
+  margin: 120px;
   min-width: 300px;
 }
+
+
 
 #unitCreationForm{
   min-width: 300px;
@@ -49,6 +52,11 @@
 .unitModal::-webkit-scrollbar {
   display: none;
 }
+
+/*.unit{
+	width: 100%;
+	height: 100%;
+}*/
 /*
 .unitModal{
 	position: relative;
